import "msgdef.proto";
option optimize_for=LITE_RUNTIME;


// 请求登入类型
enum LoginType
{
	LT_ACCOUNT				= 0;	// 账号密码走SDK登入
	LT_CHAR					= 1;	// 通过CharGuid以及Token登入（用于断线重连）
	LT_REPLACE				= 2;	// 顶号登入
	LT_BACKTOCHARLIST		= 3;	// 返回选角（需要提供guid和Token）
}
message CLLogin
{
	optional PACKET_ID PacketId = 1 [default=PACKET_LOGIN_LOGIN_CLLogin]; 
	required LoginType LoginType = 2;
	required string  UserName = 3;
	optional string  PassWord = 4;
	optional sfixed64 CharGuid = 5;
	optional string  Token 	  = 6;
	optional string	 ClientVersion = 7;
	optional string  UserId = 8;
	optional string  Data = 9;
	optional string  ChannelId = 10;
	required string  Mac = 11;
}

message LCLogin
{
	optional PACKET_ID	PacketId = 1 [default=PACKET_LOGIN_LOGIN_LCLogin];
	required RET_CODE	Result = 2;
	required LoginType 	LoginType = 3; 
	optional string     UserId = 5;
	optional RET_AUTH_FAIL_CODE PlatFormRet = 4;
}

// 玩家排队状态.
message LCStatus
{
	optional PACKET_ID PacketId = 1 [default=PACKET_LOGIN_LOGIN_LCStatus];
	// 返回登陆状态.
	required CLIENT_TURN_STATUS ClientStatus = 2;
	// 登陆排队名次
	optional int32 TurnNumber = 3;
}

// 请求角色列表.
message CLAskCharList
{
	optional PACKET_ID PacketId = 1 [default=PACKET_LOGIN_LOGIN_CLAskCharList];
	// 账号.
	required string Account = 2;
	// PlayerID(客户端不需要发送).
	optional int32 PlayerId = 3;
}


// 返回角色列表(测试阶段只返回一个角色的部分数据).
message LCRetCharList
{
	optional PACKET_ID PacketId = 1 [default=PACKET_LOGIN_LOGIN_LCRetCharList];
	// 返回结果.
	required ASKCHARLIST_RESULT Result = 2;
	// 返回账号.
	optional string Account = 3;
	// 角色数量.
	optional int32 CharNumber = 4;
	// 角色基本信息.
	repeated DB_CHAR_BASE_INFO_PB CharBaseInfo = 5;
    // 最近一次登陆的角色的下标
    optional int32 LastLoginCharIndex = 6;	
}

// 选定角色登陆.
message CLAskCharLogin
{
	optional PACKET_ID PacketId = 1 [default=PACKET_LOGIN_LOGIN_CLAskCharLogin];
	// 角色Guid.
	// required sfixed64 CharGuid = 2;
	// PlayerID(客户端不需要上传).
	required string CharGuid = 2;   //临时改的  后面要改回来
	
	optional int32 PlayerId = 3;
}

// 选定角色登陆返回结果.
message LCRetCharLogin
{
	optional PACKET_ID PacketId = 1 [default=PACKET_LOGIN_LOGIN_LCRetCharLogin];
	// 登陆结果.
	required ASKCHARLOGIN_RESULT Result = 2;
	// 服务器IP.
	optional string ServerIP = 3;
	// 服务器端口.
	optional int32 ServerPort = 4;
	// 服务器随机生成的KEY值，用以后续的验证.
	optional int32 Key = 5;
}